global untracked update

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "skeleton",
-  "version": "1.0.0=backend-finished",
-  "description": "MERN skeleton with CRUD and JWT auth",
+  "name": "multivendor-ecommerce",
+  "version": "1.1.0=stripe implementation",
+  "description": "MERN multivendor ecommerce",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
@@ -13,12 +13,16 @@
   "license": "ISC",
   "dependencies": {
     "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.10.6",
     "@hot-loader/react-dom": "^17.0.2",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
     "@mui/styles": "^5.11.13",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.52.1",
     "@types/react": "^17.0.55",
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
@@ -27,16 +31,18 @@
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "formidable": "^2.1.1",
-    "helmet": "^6.0.1",
+    "helmet": "^6.2.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
+    "query-string": "^6.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.1",
     "react-router": "^6.10.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "stripe": "^12.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
@@ -46,6 +52,7 @@
     "babel-loader": "^9.1.2",
     "file-loader": "^6.2.0",
     "nodemon": "^2.0.22",
+    "react-error-overlay": "6.0.9",
     "webpack": "^5.77.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-middleware": "^6.0.2",
